[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# requires = ["setuptools >= 64"]
# build-backend = "setuptools.build_meta"


[project]
name = "specfit"
version = "0.5.0b2"
authors = [
  { name="Tim Molteno", email="tim@elec.ac.nz" },
]
description = "Infer polynomial spectral models with covariancess"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "h5py",
  "pymc",
  "arviz",
  "matplotlib",
  "astropy",
  "sympy"
]


[project.urls]
Homepage = "https://github.com/tmolteno/specfit"
Issues = "https://github.com/tmolteno/specfit/issues"
